fixed build-index similar keys not rendering

--- a/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
+++ b/blog/bringing-mouseless-to-the-average-user-brainstorming-9.adoc
@@ -16,7 +16,7 @@
 
 link:index[Home]
 
-== bringing mouseless to the average user (brainstorming)
+== bringing-mouseless-to-the-average-user-brainstorming-9
 
 
 
