--- a/blog/research-deliberate-practice-existing-resources-29.adoc
+++ b/blog/research-deliberate-practice-existing-resources-29.adoc
@@ -16,7 +16,7 @@
 
 link:index[Home]
 
-== research deliberate practice existing resources
+== research-deliberate-practice-existing-resources-29
 
 
 
