--- a/blog/someone-built-the-windows-binaries-based-on-my-work-5.adoc
+++ b/blog/someone-built-the-windows-binaries-based-on-my-work-5.adoc
@@ -16,7 +16,7 @@
 
 link:index[Home]
 
-== Someone built the windows binaries based on my work ;-)
+== someone-built-the-windows-binaries-based-on-my-work-5
 
 
 
