--- a/blog/research-and-investigate-similar-ideas-21.adoc
+++ b/blog/research-and-investigate-similar-ideas-21.adoc
@@ -16,7 +16,7 @@
 
 link:index[Home]
 
-== investigate-similar-ideas-21
+== research-and-investigate-similar-ideas-21
 
 
 
@@ -28,7 +28,7 @@ Maybe it can be built on top of Zapier or an existing platform instead of buildi
 Although a lot of what I want is the equivalent of distributed functions. 
 
 
-== alternatives
+== alternatives to zapier
 
 . Zapier https://zapier.com/
 . mulesoft https://www.mulesoft.com/
@@ -81,6 +81,15 @@ Although a lot of what I want is the equivalent of distributed functions.
 == api management
 
 . http://blog.cloud-elements.com/convergence-api-management-ipaas-ready
+
+== More reading
+
+. perfect explanation of the problem and solution http://pchiusano.github.io/2013-05-22/future-of-software.html  Applications can and ultimately should be replaced by programming environments, explicitly recognized as such, in which the user interactively creates, executes, inspects and composes programs. In this model, interaction with the computer is fundamentally an act of creation, the creative act of programming, of assembling language to express ideas, access information, and automate tasks
+. followup http://pchiusano.github.io/2013-09-10/type-systems-and-ux-example.html
+. http://unisonweb.org/2015-05-07/about.html
+. subtext idea spreadsheet http://www.subtext-lang.org/
+. UI for programming http://worrydream.com/LearnableProgramming/
+. eve programming http://witheve.com/
 
 == conclusion
 
