--- a/original/21.adoc
+++ b/original/21.adoc
@@ -43,24 +43,45 @@ Although a lot of what I want is the equivalent of distributed functions.
 . focus on customer workflow (easy creation, billing, managing etc.) -- no major differentiators there and should be done later
 . easy site / app building  -- late
 
-== faas
+== faas services
 
 . https://webtask.io/
+. https://funktion.fabric8.io/
+. https://github.com/bigcompany/hook.io
+
+== faas frameworks
+
 . https://github.com/serverless/serverless
-. good faas review 2016 https://martinfowler.com/articles/serverless.html
+. https://github.com/openwhisk/openwhisk
+. https://www.iron.io/
+. https://github.com/iron-io/functions https://www.iron.io/hot-functions-ironfunctions/
+. https://github.com/Miserlou/Zappa
+. https://github.com/skippbox/kubeless
+. https://github.com/search?q=topic%3Aserverless-framework&type=Repositories
+. https://github.com/search?q=topic%3Aserverless&type=Repositories
+. https://github.com/alexellis/faas
 
-== api management
 
-. http://blog.cloud-elements.com/convergence-api-management-ipaas-ready
+== containers
+
+. https://www.iron.io/microcontainers-tiny-portable-containers/
+. http://blog.kubernetes.io/2017/01/fission-serverless-functions-as-service-for-kubernetes.html
+. containers management https://kubernetes.io/
+. dockerfy https://github.com/bfirsh/serverless-docker
+
+
+
 
 == People who wrote about it and get it
 
+. good faas review 2016 https://martinfowler.com/articles/serverless.html
 . http://apievangelist.com/2013/02/10/bringing-etl-to-the-masses-with-apis/
 . perfect explanation of the problem and solution http://pchiusano.github.io/2013-05-22/future-of-software.html  Applications can and ultimately should be replaced by programming environments, explicitly recognized as such, in which the user interactively creates, executes, inspects and composes programs. In this model, interaction with the computer is fundamentally an act of creation, the creative act of programming, of assembling language to express ideas, access information, and automate tasks
 . followup http://pchiusano.github.io/2013-09-10/type-systems-and-ux-example.html http://unisonweb.org/2015-05-07/about.html
 . subtext idea spreadsheet http://www.subtext-lang.org/
 . UI for programming http://worrydream.com/LearnableProgramming/
 . eve programming http://witheve.com/
+. http://blog.cloud-elements.com/convergence-api-management-ipaas-ready
 
 
 == conclusion
