--- a/blog/monetization-38.adoc
+++ b/blog/monetization-38.adoc
@@ -16,7 +16,7 @@
 
 link:index[Home]
 
-== sales-38
+== monetization-38
 
 
 
@@ -61,3 +61,7 @@ e.g learning excel and providing tracking + feedback loop + forums related to ea
 
 specific tools to test skills 
 interview process?
+
+== apps
+
+
