--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -68,6 +68,11 @@ link:monetization-38[monetization]
 link:mvp-35[mvp]
 ++++
 </li>
+<li>
+++++
+link:roadmap-39[roadmap]
+++++
+</li>
 </ul></ul>
 <li>cliweb</li><ul>
 <li>brainstorming</li><ul><li>
