--- a/blog/prototype-40.adoc
+++ b/blog/prototype-40.adoc
@@ -16,7 +16,19 @@
 
 link:index[Home]
 
-== market-analysis-36
+== prototype-40
 
 
 
+motivation
+building mindset
+problem solving
+zapier like tools and automate
+learn to program
+
+automate 
+connect to hobby e.g nutrition, biology, time management, politics etc.
+
+learn to google / use SO
+
+learn english
