--- a/original/39.adoc
+++ b/original/39.adoc
@@ -6,9 +6,10 @@
 .. contributions
 ... quick response time for pull requests
 
+(moved to mindmap)
+
 == mvp 
 
-// TODO(hbt) NEXT find pattern
 . list resources
 
 == marketing mvp to get feedback + contributions
@@ -21,8 +22,6 @@
 
 . star/watch/notify skills 
 . mark skills as mastered
-
-== 
 
 
 == reorg
