--- a/original/44.adoc
+++ b/original/44.adoc
@@ -31,3 +31,22 @@ I need full flexibility and that means firing docker containers without whatever
 fh should handle the CPU/RAM needs by monitoring usage. If the function is using 100% CPU, move it to a higher instance and increase the price. Same with RAM. 
 Or maybe offer option for user to run on lowest or highest speed in the future. 
 
+
+== more flexible tools to investigate
+
+// TODO(hbt) NEXT priotritize
+. https://github.com/fission/fission
+. https://github.com/iron-io/functions
+. https://github.com/alexellis/faas
+. https://github.com/serverless/serverless
+. https://github.com/bigcompany/hook.io
+. https://github.com/Stackvana/microcule
+
+// TODO(hbt) NEXT review more in 21
+
+also check the topics tags for more
+. lambda
+. functions
+. serverless
+. functions-as-a-service
+. 
