--- a/blog/research-and-investigate-similar-ideas-21.adoc
+++ b/blog/research-and-investigate-similar-ideas-21.adoc
@@ -69,19 +69,22 @@ Although a lot of what I want is the equivalent of distributed functions.
 
 . https://github.com/muesli/beehive
 . https://github.com/cantino/huginn
+. https://github.com/muesli/beehive https://news.ycombinator.com/item?id=13623852
 
 == faas services
 
 . https://webtask.io/
 . https://funktion.fabric8.io/
 . https://github.com/bigcompany/hook.io
-. https://taskmill.io/
+. https://taskmill.io/ limited to JS
+. view more on 44
 
 == interesting ui for faas
 
-. https://github.com/cantino/huginn
 . https://treeline.io/
-. https://news.ycombinator.com/item?id=13623852
+
+== faas related ui utils
+
 . https://states-language.net/spec.html
 . https://www.google.ca/search?q=finite+state+machine+library&oq=finite+state+machine+library&aqs=chrome..69i57j0l5.7704j0j4&sourceid=chrome&ie=UTF-8
 . https://jsplumbtoolkit.com/
