--- a/original/44.adoc
+++ b/original/44.adoc
@@ -27,7 +27,6 @@ There are already tools to provide faas. see if those can be reused + wrapped up
 wrote 2 functions with webtask. problem is limitations in the language, environment etc. 
 I need full flexibility and that means firing docker containers without whatever is inside of them.
 
-// TODO(hbt) NEXT add ideas to mindmap
 fh should handle the CPU/RAM needs by monitoring usage. If the function is using 100% CPU, move it to a higher instance and increase the price. Same with RAM. 
 Or maybe offer option for user to run on lowest or highest speed in the future. 
 
@@ -49,12 +48,13 @@ Or maybe offer option for user to run on lowest or highest speed in the future.
 
 
 also check the topics tags for more
+
 . lambda
 . functions
 . serverless
 . functions-as-a-service
 
-Conclusion:
+== Conclusion:
 
 Using aws lambda + ecs should cover all needs. ecs supports docker and orchestration like kubernetes + you get all the aws services. 
 lamba despite its limitations can be used for smaller functions.
