--- a/blog/index.adoc
+++ b/blog/index.adoc
@@ -73,7 +73,12 @@ link:roadmap-33[roadmap]
 link:iron-functions-47[iron functions]
 ++++
 </li>
-</ul></ul>
+</ul><li>
+++++
+link:clarifying-vision-48[clarifying vision]
+++++
+</li>
+</ul>
 <li>thinking about software</li><ul><li>
 ++++
 link:3-related-ideas-26[3 related ideas]
